Weekly project portfolio-app - Submission date: Feb 17, 2023

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.statusButtonInactive {
+    height:40px;
+    width:86px; 
+    border-radius: 100px;
+    border:none; 
+    background-color: #E4E6E7;
+    color: #081E34;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.statusButtonActive {
+    height:40px;
+    width:86px; 
+    border-radius: 100px;
+    border:none; 
+    background: rgba(8, 30, 52, 0.42);
+    color: #FFFFFF;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type='checkbox'] {
+    accent-color: #712FFF !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+.crossedOutTextAndGrayColors {
+    text-decoration-line: line-through;
+    background: #E4E6E7;
+    color: #959595;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
